[package]
name = "unity-guid-rewriter"
license = "Unlicense"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
regex = "1.10"
uuid = { version = "1.7", features = ["v4"] }
walkdir = "2.4"
yaml-rust = "0.4"
